--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@beenhere4hours/merge-objects",
-  "version": "1.0.1"
+  "version": "1.0.1",
+  "description": "Deep recursive merge of two objects",
+  "homepage": "https://github.com/beenhere4hours/merge-objects#README.md",
+  "url": "https://github.com/beenhere4hours/merge-objects/issues"
 }
