--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
+    "author": "Daniel Masi",
     "name": "@beenhere4hours/merge-objects",
     "version": "1.0.3",
     "description": "Deep recursive merge of two objects",
     "homepage": "https://github.com/beenhere4hours/merge-objects#README.md",
     "url": "https://github.com/beenhere4hours/merge-objects/issues",
-    {
-        "license": "MIT"
-    },
+    "license": "MIT",
     "repository": {
         "type": "git",
         "url": "https://github.com/beenhere4hours/merge-objects.git"
