--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "jshint": "^2.10.1",
     "mocha": "^5.2.0"
   },
   "scripts": {
+    "lint": "jshint index.js",
     "test": "mocha"
   }
 }
