--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "author": "Daniel Masi",
   "name": "@beenhere4hours/merge-objects",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Variadic deep recursive merge of objects",
   "homepage": "https://github.com/beenhere4hours/merge-objects#README.md",
   "url": "https://github.com/beenhere4hours/merge-objects/issues",
   "license": "MIT",
+  "keywords": [
+    "deep",
+    "object",
+    "object-path",
+    "merge",
+    "recursive",
+    "variadic"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/beenhere4hours/merge-objects.git"
